format done started styling

--- a/index.html
+++ b/index.html
@@ -2,37 +2,58 @@
 <html>
   <head>
     <title>About Me</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
-      <h1>Nick Asmussen</h1>
-      <p>dev student at code fellows<p>
+      <div>
+        <h1>about me: nick asmussen</h1>
+        <nav>
+          <ul>
+            <li><a><img src="#"></a></li>
+            <li><a><img src="#"></a></li>
+            <li><a><img src="#"></a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
     <main>
-      <img src="http://placehold.it/300x300">
-      <h2>Bio:</h2>
-      <ul>
-        <li>After working for years in restaurant managment I've started to learn code.</li>
-        <li>Soon I hope to be programming games and websites.</li>
-      </ul>
-      <h2>Top Ten Favorite Things:</h2>
-      <ul>
-        <li>Pizza</li>
-        <li>Gaming</li>
-        <li>Guitar</li>
-        <li>Travel</li>
-        <li>Dogs</li>
-        <li>Football</li>
-        <li>Indie Music</li>
-        <li>Beer</li>
-        <li>Sci-fi Movies</li>
-        <li>Fantasy Audiobooks</li>
-        <li>Coding</li>
-      </ul>
-    </main>
+      <!-- hero image !-->
+      <div class="placehold"></div>
+      <div class="hero">
+        <img src="http://placehold.it/620x660">
+      </div>
 
+
+      <div class="experience">
+        <h2>experience:</h2>
+        <ul>
+          <li><img src="http://placehold.it/310x310"></li>
+          <li><img src="http://placehold.it/310x310"></li>
+          <li><img src="http://placehold.it/310x310"></li>
+          <li><img src="http://placehold.it/310x310"></li>
+        </ul>
+      </div>
+      <!--lower section !-->
+
+      <div class="likes">
+        <h2>likes:</h2>
+        <ul>
+          <li><img src="http://placehold.it/310x210" >pizza</li>
+          <li><img src="http://placehold.it/310x210" >gaming</li>
+          <li><img src="http://placehold.it/310x210" >guitar</li>
+          <li><img src="http://placehold.it/310x210" >travel</li>
+          <li><img src="http://placehold.it/310x210" >dogs</li>
+          <li><img src="http://placehold.it/310x210" >football</li>
+        </ul>
+      </div>
+      <div class="about_me">
+        <h2>about me:</h2>
+        <p>welcome to my page. let me share a little about myself. seattle born and raised, growing up i always enjoyed being creative. over the years, writing stories and drawing pictures in crayon evolved in to a passion to make something on another level. i spent time studying film, teaching myself guitar and years of training to become a sous chef. now i'm working with a new a medium. coding is the next step for me to create my dreams. welcome to my page, the place where creativity begins again.</p>
+      </div>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
